include/hl/activation.h

typedef struct hl_activation_process hl_activation_process;
/* The pre-hl_activation_descriptor form of hl_activation_streams, retained unchanged for existing
 * callers. -1 in a field inherits the application's stream; a nonnegative descriptor is duplicated into
 * the reexecuted child. Same ownership rules. New code should prefer hl_activation_streams. */
typedef struct hl_activation_stdio {
    int32_t input;
    int32_t output;
    int32_t error;
} hl_activation_stdio;
typedef struct hl_terminal_size {
    uint16_t rows;
    uint16_t columns;
} hl_terminal_size;
typedef struct hl_process_domain {
    uint64_t identity[2];
} hl_process_domain;
typedef struct hl_activation_process_info {
    uint64_t host_id;
    uint32_t initial;
    uint32_t reserved;
} hl_activation_process_info;
/* The pre-hl_activation_descriptor forms of the two calls above, retained unchanged for existing callers.
 * They are the same operations with -1 in place of HL_ACTIVATION_DESCRIPTOR_NONE. */
HL_API hl_status hl_activation_start_with_channels(const char *executable, uint32_t guest_isa, const char *config_path,
                                                   const hl_activation_stdio *stdio, const hl_terminal_size *size,
                                                   int32_t transport, int32_t checkpoint, int32_t trigger,
                                                   int32_t *out_master, hl_activation_process **out_process);
HL_API hl_status hl_terminal_resize(int32_t master, hl_terminal_size size);
/* Returns the native child process identifier while the opaque handle exists. */
HL_API hl_status hl_activation_process_id(const hl_activation_process *process, uint64_t *out_process_id);
/* Takes a deterministic snapshot of verified live process-domain members. Set
 * capacity to zero to query the required count. A racing exit may make a
 * subsequent snapshot smaller. */
HL_API hl_status hl_activation_domain_processes(hl_process_domain domain, uint64_t initial_process_id,
                                                hl_activation_process_info *processes, uint32_t capacity,
                                                uint32_t *out_count);
/* wait is idempotent: completed status/result values are cached in the handle. */
HL_API hl_status hl_activation_wait(hl_activation_process *process, hl_engine_exit *out_exit);
/* try_wait sets out_ready=0 without modifying out_exit while the child runs. */
HL_API hl_status hl_activation_try_wait(hl_activation_process *process, uint32_t *out_ready, hl_engine_exit *out_exit);
HL_API hl_status hl_activation_kill(hl_activation_process *process);
/* Terminates every live member whose native PID and birth identity match this domain registry.
 * Repeated termination is successful; zero identities are rejected. */
HL_API hl_status hl_activation_domain_terminate(hl_process_domain domain);
/* Destroying a live handle force-stops and reaps it; destroying a waited handle
 * only releases cached parent-side state. */
HL_API void hl_activation_process_destroy(hl_activation_process *process);